Adapting notebook and changing folder structure

--- a/NOrbit example.ipynb
+++ b/NOrbit example.ipynb
@@ -4,21 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Numerics Lab Astrophysics SS2023:"
+    "# Example Notebook"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Focus Project: N-Body Problem with Runge-Kutta 4th Order Method"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For the focus project the numpy and matplotlib modules were imported. Moreover, the mplot3d visualization tool from mpl_toolkits and the coconv module was imported, which converts orbital elements in heliocentric coordinates to barycentric coordinates and viceversa. This code was made available by Maximilian Zimmerman."
+    "## N-Body Problem with Runge-Kutta 4th Order Method"
    ]
   },
   {
@@ -30,7 +23,77 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits import mplot3d\n",
-    "from coconv import kepToCart, cartToKep"
+    "from src.NOrbit import NOrbit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[[ 4.24782478e-03, -2.16251350e-03, -7.21851293e-05],\n",
+       "         [ 4.25483109e-01, -1.87712309e-02, -5.10377660e-02],\n",
+       "         [ 6.32901144e-01,  3.62948043e-01, -4.23470535e-02],\n",
+       "         [-9.69143653e-01, -2.45314794e-01, -7.04343478e-05],\n",
+       "         [ 1.30169876e+00,  4.72591184e-01,  3.09690677e-02],\n",
+       "         [-4.45076375e+00,  2.26600455e+00,  7.57571192e-02]],\n",
+       " \n",
+       "        [[ 4.52401270e-03, -1.56704992e-03, -6.07999938e-05],\n",
+       "         [-2.02144903e+00,  1.93131342e+00,  2.94443289e-01],\n",
+       "         [-5.92064940e-01,  9.82248111e-01, -1.22618871e-02],\n",
+       "         [ 3.40277821e-02, -9.61582061e-01, -6.04114356e-05],\n",
+       "         [ 3.83081983e-01,  1.35999076e+00,  4.51075799e-02],\n",
+       "         [-4.73952583e+00,  1.64201369e+00,  6.36834860e-02]],\n",
+       " \n",
+       "        [[ 4.71766434e-03, -9.44794283e-04, -4.83247929e-05],\n",
+       "         [-4.41896215e+00,  3.26782576e+00,  6.17521275e-01],\n",
+       "         [-7.40011233e-01,  1.40813741e-01,  2.74469437e-02],\n",
+       "         [ 4.58939435e-01,  1.51798990e-01, -4.93488651e-05],\n",
+       "         [-8.29694960e-01,  1.23374756e+00,  2.54588269e-02],\n",
+       "         [-4.94261946e+00,  9.88312991e-01,  5.04581014e-02]]]),\n",
+       " array([[[ 3.59851176e-06,  6.56367823e-06,  1.24124007e-07],\n",
+       "         [-3.49352578e-03,  2.48239134e-02,  1.08182275e-03],\n",
+       "         [-1.01010261e-02,  1.73684082e-02, -2.34048081e-04],\n",
+       "         [ 3.88596076e-03, -1.66935219e-02,  1.24050781e-07],\n",
+       "         [-5.37719647e-03,  1.43235386e-02,  3.52250986e-04],\n",
+       "         [-3.75528162e-03, -6.87925610e-03, -1.29789121e-04]],\n",
+       " \n",
+       "        [[ 2.65945049e-06,  6.94559618e-06,  1.35775639e-07],\n",
+       "         [-2.80304910e-02,  1.58799707e-02,  3.78466515e-03],\n",
+       "         [-9.40286081e-03, -2.48821507e-03,  5.15945371e-04],\n",
+       "         [ 1.52180804e-02,  2.48265581e-03,  1.06706309e-07],\n",
+       "         [-1.40439876e-02,  4.72964547e-03, -4.47295330e-05],\n",
+       "         [-2.80183252e-03, -7.28485913e-03, -1.44258989e-04]],\n",
+       " \n",
+       "        [[ 1.75456536e-06,  7.19011188e-06,  1.47757966e-07],\n",
+       "         [-2.67585995e-02,  1.47979421e-02,  3.60202863e-03],\n",
+       "         [ 8.40730099e-03, -1.53327188e-02,  2.30192942e-04],\n",
+       "         [-1.27489043e-02,  1.82482135e-02,  1.61602185e-07],\n",
+       "         [-1.20199700e-02, -7.07239654e-03, -3.66616773e-04],\n",
+       "         [-1.81102201e-03, -7.55420506e-03, -1.55943246e-04]]]))"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mercury = [np.array((0.3871, 0.2056, 7.0049, 48.3317, 77.4565, 252.2508, 1.659e-7))]\n",
+    "venus = [np.array((0.7233, 0.0068, 3.3947, 76.6807, 131.5330, 181.9797, 2.447e-6))]\n",
+    "earth = [np.array((1.0, 0.0167, 0.0001, -11.2606, 102.9472, 100.4644, 3.039e-6))]\n",
+    "mars = [np.array((1.5237, 0.0934, 1.8506, 49.5785, 336.0408, 355.4533, 3.226e-7))]\n",
+    "jupiter = [np.array((5.2034, 0.0484, 1.3053, 100.5562, 14.7539, 34.4044, 9.542e-4))]\n",
+    "planets = [mercury, venus, earth, mars, jupiter]\n",
+    "dt=1\n",
+    "n_orbits=2.5\n",
+    "m_star=1\n",
+    "type(planets)\n",
+    "solar = NOrbit(planet_elements=planets, m_star=m_star)\n",
+    "solar.orbit(dt=dt, n_orbits=n_orbits)"
    ]
   },
   {
@@ -71,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -353,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
